feat: add API server provenance
